Product archive items centered. Produc section spacing changed. Saveti section styling fixed.

--- a/assets/sass/components/_product-archive.scss
+++ b/assets/sass/components/_product-archive.scss
@@ -182,11 +182,11 @@
   
       &-inner-wrapper {
         display: flex;
-        max-width: 730px;
+        max-width: 1160px;
         margin: 0 auto;
         flex-flow: row;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: center;
       }
   
       &-single {
@@ -194,6 +194,15 @@
         flex-flow: column;
         width: calc(50% - 15px);
         max-width: 350px;
+        margin-left: 16px;
+        margin-right: 16px; 
+
+        &:first-child {
+          margin-left: 0;
+        }
+        &:last-child {
+          margin-right: 0;
+        }
 
         &:hover {
 					.archive-product__content-single-image {
@@ -315,14 +324,15 @@
 
       }
       &-inner-wrapper {
-        max-width: 1110px;
-        justify-content: flex-start;
+        // max-width: 1110px;
+        // justify-content: flex-start;
       }
   
       &-single {
-        margin-left: 15px;
-        margin-right: 15px;
+        // margin-left: 15px;
+        // margin-right: 15px;
         width: 33%;
+        max-width: 350px;
 
         &:nth-child(3n + 1) {
           margin-left: 0;
