--- a/assets/sass/components/_products-section.scss
+++ b/assets/sass/components/_products-section.scss
@@ -1,6 +1,6 @@
 .products-section {
 	&__inner-wrapper {
-		padding: 100px 5% 30px;
+		padding: 30px 5% 30px;
 	}
 	&__title {
     margin-bottom: 30px;
